--- a/Styles/style.css
+++ b/Styles/style.css
@@ -12,9 +12,11 @@ body {
   
   #game-container {
     display: flex;
+    flex-direction: column-reverse;
     width: 100vw;
     padding: 20px 0px;
     justify-content: center;
+    align-items: center;
   }
   
   #game-screen {
