--- a/Styles/style.css
+++ b/Styles/style.css
@@ -4,17 +4,48 @@
 body {
     padding: 0;
     text-align: center;
+    font-family: fantasy;
   }
   
   #game-intro {
     padding: 20px 0px;
+    background-image: url(../images/wallpaper.jpeg);
+    background-position: center;
+    background-size: cover;
+    height: 800px;
+    width: 100%;
   }
+
+  #game-intro p {
+    color: white;
+    font-size: 1.7rem;  
+    text-shadow: 2px 2px 20px white;
+/*     width: 500px;
+ */    text-align: center;
+    margin-left: 25%;
+    margin-right: 25%;
+  }
+
+  #game-intro h1 {
+    color: white;
+    text-shadow: 2px 2px 10px white;
+    font-size: 2.2rem;
+    margin-bottom: 2%;
+    margin-top: 15%;
+
+  }
+
+/*   #intro-image {
+    height: auto;
+    width: 100%;
+    resize: both;
+  } */
   
   #game-container {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     width: 100vw;
-    padding: 20px 0px;
+    padding: 0 px 0px;
     justify-content: center;
     align-items: center;
   }
@@ -25,17 +56,20 @@ body {
     padding: 20px 0px;
     overflow: hidden;
     position: relative;
-    background-image: url(../images/image.png);
+    background-image: url(../images/vectorgif.gif);
     background-size: cover;
     animation: slide 10s linear infinite;
   }
 
   #ground-image {
     display: none;
-
-
-
   }
+
+  #stats {
+    display: none;
+  }
+
+
   
 /*   @keyframes slide {
     0% {
@@ -59,6 +93,25 @@ body {
   #game-end {
     display: none;
   }
+
+  #game-end-job{
+    display: none;
+
+  }
+
+  #game-end-job img{
+    background-position: center;
+    background-size: cover;
+    height: 500px;
+    width: auto;
+  }
+
+  #game-end img{
+    background-position: center;
+    background-size: cover;
+    height: 500px;
+    width: auto;
+  }
   
   .game-intro p {
     font-size: 18px;
@@ -75,12 +128,19 @@ body {
   
   body button {
     font-size: 30px;
-    background-color: #870007;
+    background-color: #460a7f;
     color: #fff;
     padding: 20px 40px;
     border: 0;
     box-shadow: 0;
     border-radius: 5px;
     margin-bottom: 20px;
+    box-shadow: 2px 2px 10px white;
+    font-family: fantasy;
+  }
+
+  #start-button {
+    text-align: center;
+    margin-top: 75px;
   }
   
