--- a/Styles/style.css
+++ b/Styles/style.css
@@ -49,8 +49,8 @@ body {
     justify-content: center;
     align-items: center;
     position: relative;
-    background-image: url(../images/wallpaper.jpeg);
-    background-size: cover;
+    background-image: url(../images/background.jpg);
+    background-size: auto;
     animation: slide 10s linear infinite;
   }
   
