--- a/Styles/style.css
+++ b/Styles/style.css
@@ -2,7 +2,7 @@
 body {
   padding: 0;
   text-align: center;
-  font-family: fantasy;
+  font-family: Monaco;
 }
 
 #game-intro {
@@ -17,16 +17,16 @@ body {
 #game-intro p {
   color: white;
   font-size: 1.7rem;  
-  text-shadow: 2px 2px 20px white;
+  text-shadow: 5px 5px 40px black;
   text-align: center;
-  margin-left: 25%;
-  margin-right: 25%;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 
 #game-intro h1 {
   color: white;
   text-shadow: 2px 2px 10px white;
-  font-size: 2.2rem;
+  font-size: 4.5rem;
   margin-bottom: 2%;
   margin-top: 15%;
 
@@ -126,7 +126,7 @@ body button {
   border-radius: 5px;
   margin-bottom: 20px;
   box-shadow: 2px 2px 10px white;
-  font-family: fantasy;
+  font-family: Monaco;
 }
 
 #start-button {
